feat: criacao de schema do metodo post / get para estoque item
